# Rinse

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
Formula/: rinse.rb
src/rinse/adapters/: __init__.py  dataset_files.py  html_reports.py  json_reports.py  pandas_datasets.py  phone_numbers.py  rapidfuzz_similarity.py
src/rinse/application/: __init__.py  pipeline.py  use_cases.py
src/rinse/domain/: __init__.py  deduplication.py  entities.py  normalization.py  operations.py  validation.py  value_objects.py
src/rinse/interfaces/: api.py  cli.py
src/rinse/ports/: __init__.py  datasets.py  jobs.py  reports.py  storage.py
tests/: test_api.py  test_architecture_boundaries.py  test_cleaning_pipeline.py  test_cli.py  test_dataset_file_adapters.py  test_deduplication_operations.py  test_golden_realistic_cleaning.py  test_normalization_operations.py  test_validation_operations.py
tests/fixtures/: dirty_customers.csv  dirty_realistic_customers.csv  dirty_realistic_customers.xlsx  expected_customers.json  expected_realistic_customers_clean.json  expected_realistic_customers_report.json
web/: package-lock.json  package.json
web/app/: data.ts  globals.css  layout.tsx  page.tsx
web/app/components/: architecture-section.tsx  copy-command.tsx  data-table.tsx  final-cta.tsx  hero.tsx  object-blocks.tsx  process-strip.tsx  site-header.tsx  theme-toggle.tsx  web-demo.tsx
web/public/: expected_realistic_customers_report.json
