[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rinse"
version = "0.1.0"
description = "Clean messy CSV and Excel files with auditable data-cleaning pipelines."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "Rinse" }
]
dependencies = [
  "openpyxl>=3.1",
  "pandas>=2.0",
  "phonenumbers>=9.0",
  "rapidfuzz>=3.0",
  "typer>=0.12"
]

[project.scripts]
rinse = "rinse.interfaces.cli:app"

[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/rinse"]
