[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rinse"
version = "0.1.0"
description = "Clean messy CSV and Excel files with auditable data-cleaning pipelines."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "Rinse" }
]
dependencies = [
  "fastapi>=0.128",
  "openpyxl>=3.1",
  "pandas>=2.0",
  "phonenumbers>=9.0",
  "python-multipart>=0.0.20",
  "rapidfuzz>=3.0",
  "typer>=0.12",
  "uvicorn>=0.30"
]

[project.scripts]
rinse = "rinse.interfaces.cli:app"

[project.optional-dependencies]
dev = [
  "httpx>=0.28",
  "pytest>=8.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/rinse"]
